--- a/SierraSam.Core.Tests.Integration/SierraSam.Core.Tests.Integration.csproj
+++ b/SierraSam.Core.Tests.Integration/SierraSam.Core.Tests.Integration.csproj
@@ -17,7 +17,13 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SierraSam\SierraSam.csproj" />
+      <None Update="exampleFile.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SierraSam.Core\SierraSam.Core.csproj" />
     </ItemGroup>
 
 </Project>
