--- a/SierraSam.Core.Tests.Unit/SierraSam.Core.Tests.Unit.csproj
+++ b/SierraSam.Core.Tests.Unit/SierraSam.Core.Tests.Unit.csproj
@@ -9,7 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+        <PackageReference Include="NSubstitute" Version="5.0.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
         <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
@@ -17,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SierraSam\SierraSam.csproj" />
+      <ProjectReference Include="..\SierraSam.Core\SierraSam.Core.csproj" />
     </ItemGroup>
 
 </Project>
