--- a/SierraSam.Core/SierraSam.Core.csproj
+++ b/SierraSam.Core/SierraSam.Core.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+      <PackageReference Include="System.Data.Odbc" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
