--- a/SierraSam/SierraSam.csproj
+++ b/SierraSam/SierraSam.csproj
@@ -36,4 +36,10 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>../Tests/SierraSam.Tests.Integration</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
 </Project>
