--- a/SierraSam.Core/SierraSam.Core.csproj
+++ b/SierraSam.Core/SierraSam.Core.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
       <PackageReference Include="System.Data.Odbc" Version="7.0.0" />
+      <PackageReference Include="System.IO.Abstractions" Version="19.2.4" />
     </ItemGroup>
 
 </Project>
