--- a/SierraSam.Core.Tests.Unit/SierraSam.Core.Tests.Unit.csproj
+++ b/SierraSam.Core.Tests.Unit/SierraSam.Core.Tests.Unit.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="6.10.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
         <PackageReference Include="NSubstitute" Version="5.0.0" />
