--- a/SierraSam.Tests.Integration/SierraSam.Tests.Integration.csproj
+++ b/SierraSam.Tests.Integration/SierraSam.Tests.Integration.csproj
@@ -16,6 +16,8 @@
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
         <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.2" />
+        <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="19.2.4" />
+        <PackageReference Include="Testcontainers" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
