--- a/SierraSam/SierraSam.csproj
+++ b/SierraSam/SierraSam.csproj
@@ -16,7 +16,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\RedGate.Client\RedGate.Client.Activation.Shim\RedGate.Client.Activation.Shim.csproj" />
       <ProjectReference Include="..\SierraSam.Core\SierraSam.Core.csproj" />
       <ProjectReference Include="..\SierraSam.Database\SierraSam.Database.csproj" />
     </ItemGroup>
@@ -42,6 +41,10 @@
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
             <_Parameter1>../Tests/SierraSam.Tests.Integration</_Parameter1>
         </AssemblyAttribute>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Licensing\" />
     </ItemGroup>
 
 </Project>
