Use container random ports

--- a/SierraSam.Core.Tests.Integration/SierraSam.Core.Tests.Integration.csproj
+++ b/SierraSam.Core.Tests.Integration/SierraSam.Core.Tests.Integration.csproj
@@ -22,6 +22,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\SierraSam.Core\SierraSam.Core.csproj" />
+      <ProjectReference Include="..\SierraSam.Database\SierraSam.Database.csproj" />
     </ItemGroup>
 
 </Project>
