Return collection of PendingMigration.cs from seekers

--- a/SierraSam.Core/SierraSam.Core.csproj
+++ b/SierraSam.Core/SierraSam.Core.csproj
@@ -16,6 +16,8 @@
         <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
         <InternalsVisibleTo Include="SierraSam.Core.Tests.Unit" />
         <InternalsVisibleTo Include="SierraSam.Core.Tests.Integration" />
+        <InternalsVisibleTo Include="SierraSam.Tests.Unit" />
+        <InternalsVisibleTo Include="SierraSam.Tests.Integration" />
     </ItemGroup>
 
 </Project>
