--- a/Tests/SierraSam.Integration/SierraSam.Tests.Integration.csproj
+++ b/Tests/SierraSam.Integration/SierraSam.Tests.Integration.csproj
@@ -17,12 +17,13 @@
         <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.2" />
         <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="19.2.4" />
-        <PackageReference Include="Testcontainers" Version="3.3.0" />
+        <PackageReference Include="Testcontainers" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SierraSam.Core\SierraSam.Core.csproj" />
-      <ProjectReference Include="..\SierraSam.Database\SierraSam.Database.csproj" />
+        <ProjectReference Include="..\..\Source\SierraSam\SierraSam.csproj" />
+        <ProjectReference Include="..\..\Source\SierraSam.Core\SierraSam.Core.csproj" />
+        <ProjectReference Include="..\..\Source\SierraSam.Database\SierraSam.Database.csproj" />
     </ItemGroup>
 
 </Project>
