--- a/Tests/SierraSam.Unit/SierraSam.Tests.Unit.csproj
+++ b/Tests/SierraSam.Unit/SierraSam.Tests.Unit.csproj
@@ -10,18 +10,18 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.10.0" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
         <PackageReference Include="NSubstitute" Version="5.0.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
         <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.2" />
-        <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="19.2.4" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SierraSam.Core\SierraSam.Core.csproj" />
+      <ProjectReference Include="..\..\Source\SierraSam\SierraSam.csproj" />
+      <ProjectReference Include="..\..\Source\SierraSam.Core\SierraSam.Core.csproj" />
+      <ProjectReference Include="..\..\Source\SierraSam.Database\SierraSam.Database.csproj" />
     </ItemGroup>
 
 </Project>
