--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           dotnet-version: 7.x.x
           cache: true
+          cache-dependency-path: ./SierraSam/packages.lock.json
       - run: dotnet restore --locked-mode
       - run: dotnet build --configuration Release --no-restore
       - run: dotnet test --configuration Release --no-build
