--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
           retention-days: 1
   test:
     runs-on: ubuntu-latest
+    needs:
+      - build
     steps:
       - name: Install Postgres ODBC Driver
         run: |
