--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,8 @@ jobs:
         with:
           name: build-artifact
       - name: Run Tests
-        run: dotnet test --configuration Release --no-build
+        run: |
+          ls
+          ls ./SierraSam/bin
+          ls ./SierraSam.Core
+          dotnet test --configuration Release --no-build
