--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,22 +6,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-dotnet@v3
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 7.x.x
           cache: true
           cache-dependency-path: ./SierraSam/packages.lock.json
-      - run: dotnet restore --locked-mode
-      - run: dotnet build --configuration Release --no-restore
-      - uses: actions/upload-artifact@v3
+      - name: Restore Dependencies
+        run: dotnet restore --locked-mode
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v3
         if: success()
         with:
           name: build-artifact
-          path: |
-            ./*/bin/
-            .nuget/packages/
+          path: ./*/bin/
           retention-days: 1
+
   test:
     runs-on: ubuntu-latest
     needs:
@@ -31,16 +35,19 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y odbc-postgresql
-      - uses: actions/checkout@v4
-      - uses: actions/setup-dotnet@v3
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 7.x.x
-      - uses: actions/download-artifact@v3
+          cache: true
+          cache-dependency-path: ./SierraSam/packages.lock.json
+      - name: Restore Dependencies
+        run: dotnet restore --locked-mode
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v3
         with:
           name: build-artifact
       - name: Run Tests
-        run: |
-          ls
-          ls ./SierraSam/bin
-          ls ./SierraSam.Core
-          dotnet test --configuration Release --no-build
+        run: dotnet test --configuration Release --no-build
