--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: SierraSam Build
 
 on: [push]
 
+env:
+  DOTNET_VERSION: 7.x.x
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,7 +14,7 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 7.x.x
+          dotnet-version: ${{ env.DOTNET_VERSION }}
           cache: true
           cache-dependency-path: ./SierraSam/packages.lock.json
       - name: Restore Dependencies
@@ -25,13 +28,17 @@ jobs:
             ./*/bin/
             ~/.nuget/packages/
           key: ${{ runner.os }}-build-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-build-
 
   test:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
       - name: Install Postgres ODBC Driver
         run: |
           sudo apt-get update
@@ -55,6 +62,12 @@ jobs:
       matrix:
         runtime: [ win-x64, linux-x64, linux-arm64, osx-x64, osx-arm64 ]
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
       - name: Restore Build Artifacts
         uses: actions/cache@v3
         with:
