Remove matrix for test job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,6 @@ jobs:
   test:
     needs: build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        runtime: [ win-x64, linux-x64, linux-arm64, osx-x64, osx-arm64 ]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -54,13 +51,6 @@ jobs:
           cache-dependency-path: ./SierraSam/packages.lock.json
       - name: Restore Dependencies
         run: dotnet restore --locked-mode
-      - name: Restore Build Artifacts
-        uses: actions/cache@v3
-        with:
-          path: |
-            ./*/bin/
-            ./*/obj/
-          key: ${{ matrix.runtime }}-build-${{ github.sha }}
       - name: Install Postgres ODBC Driver
         if: success()
         run: |
@@ -68,8 +58,7 @@ jobs:
           sudo apt-get install -y odbc-postgresql
       - name: Run Tests
         if: success()
-        run: dotnet test --configuration Release --no-build --verbosity normal --runtime ${{ matrix.runtime }}
-
+        run: dotnet test --configuration Release --verbosity normal
 
   publish:
     needs: test
