--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,7 @@ jobs:
         run: dotnet test --configuration Release --verbosity normal
 
   publish:
+    if: ${{ github.ref_name == 'main' }}
     needs: test
     runs-on: ubuntu-latest
     strategy:
