--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
         id: runtimes
         run: |
           [ ${{ github.ref_name }} -eq 'main' ] && \
-          RUNTIMES=[win-x64, linux-x64, linux-arm64, osx-x64, osx-arm64] || \
-          RUNTIMES=[linux-x64]
+          RUNTIMES=[\"win-x64\", \"linux-x64\", \"linux-arm64\", \"osx-x64\", \"osx-arm64\"] || \
+          RUNTIMES=[\"linux-x64\"]
           echo "runtimes=$RUNTIMES" >> $GITHUB_OUTPUT
 
   build:
