--- a/SierraSam.Core/SierraSam.Core.csproj
+++ b/SierraSam.Core/SierraSam.Core.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
       <PackageReference Include="System.Data.Odbc" Version="7.0.0" />
       <PackageReference Include="System.IO.Abstractions" Version="19.2.69" />
+      <PackageReference Include="YamlDotNet" Version="13.5.2" />
     </ItemGroup>
     
     <ItemGroup>
