--- a/SierraSam.Core/SierraSam.Core.csproj
+++ b/SierraSam.Core/SierraSam.Core.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="ConsoleTables" Version="2.5.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
       <PackageReference Include="System.Data.Odbc" Version="7.0.0" />
       <PackageReference Include="System.IO.Abstractions" Version="19.2.69" />
