--- a/SierraSam.Tests.Unit/SierraSam.Tests.Unit.csproj
+++ b/SierraSam.Tests.Unit/SierraSam.Tests.Unit.csproj
@@ -20,6 +20,7 @@
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
         <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
         <PackageReference Include="coverlet.collector" Version="6.0.0" />
+        <PackageReference Include="Spectre.Console.Testing" Version="0.47.0" />
     </ItemGroup>
 
     <ItemGroup>
