--- a/SierraSam.Database/SierraSam.Database.csproj
+++ b/SierraSam.Database/SierraSam.Database.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+      <PackageReference Include="Respawn" Version="6.1.0" />
     </ItemGroup>
 
     <ItemGroup>
