--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,18 @@ jobs:
           wget https://dev.mysql.com/get/Downloads/Connector-ODBC/8.2/mysql-connector-odbc_8.2.0-1ubuntu22.04_amd64.deb
           wget https://dev.mysql.com/get/Downloads/MySQL-8.2/mysql-community-client-plugins_8.2.0-1ubuntu22.04_amd64.deb
           sudo dpkg -i mysql-community-client-plugins_8.2.0-1ubuntu22.04_amd64.deb mysql-connector-odbc_8.2.0-1ubuntu22.04_amd64.deb
+      - name: Install Oracle ODBC Driver
+        if: success()
+        run: |
+          wget https://download.oracle.com/otn_software/linux/instantclient/2111000/instantclient-basiclite-linux.x64-21.11.0.0.0dbru.zip
+          wget https://download.oracle.com/otn_software/linux/instantclient/2111000/instantclient-odbc-linux.x64-21.11.0.0.0dbru.zip
+          unzip instantclient-basiclite-linux.x64-21.11.0.0.0dbru.zip -d /opt/oracle
+          unzip instantclient-odbc-linux.x64-21.11.0.0.0dbru.zip -d /opt/oracle
+          sudo apt-get install -y glibc-source libaio1
+          sudo bash /opt/oracle/instantclient_21_11/odbc_update_ini.sh "/" "/opt/oracle/instantclient_21_11" "Oracle in instantclient_21_12" "OracleODBC-21" "/etc/odbc.ini"
       - name: Run Tests
+        env:
+          LD_LIBRARY_PATH: /opt/oracle/instantclient_21_11
         if: success()
         run: dotnet test --configuration Release --verbosity normal --logger trx
       - name: Upload test results
