--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,12 @@ jobs:
           unzip instantclient-odbc-linux.x64-21.11.0.0.0dbru.zip -d /opt/oracle
           sudo apt-get install -y glibc-source libaio1
           sudo bash /opt/oracle/instantclient_21_11/odbc_update_ini.sh "/" "/opt/oracle/instantclient_21_11" "Oracle 21 ODBC driver" "OracleODBC-21" "/etc/odbc.ini"
+      - name: Login to Oracle Container Repository
+        uses: docker/login-action@v2
+        with:
+          registry: container-registry.oracle.com
+          username: ${{ secrets.OCR_USER }}
+          password: ${{ secrets.OCR_PWD }}
       - name: Run Tests
         env:
           LD_LIBRARY_PATH: /opt/oracle/instantclient_21_11
