Add test fixture data with name and category

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: SierraSam Build
+name: Build
 
 on: [push]
 
@@ -53,6 +53,22 @@ jobs:
             ./*/obj/
           key: ${{ matrix.runtime }}-build-${{ github.sha }}
 
+  postgres:
+    needs: build
+    uses: ./.github/workflows/postgres.yml
+
+  sqlserver:
+    needs: build
+    uses: ./.github/workflows/sqlserver.yml
+
+  mysql:
+    needs: build
+    uses: ./.github/workflows/mysql.yml
+
+  oracle:
+    needs: build
+    uses: ./.github/workflows/oracle.yml
+
   test:
     needs: build
     runs-on: ubuntu-22.04
@@ -67,42 +83,25 @@ jobs:
           cache-dependency-path: ./SierraSam/packages.lock.json
       - name: Restore Dependencies
         run: dotnet restore --locked-mode
-      - name: Install Postgres ODBC Driver
-        if: success()
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y odbc-postgresql
-      - name: Install MySQL ODBC Driver
-        if: success()
-        run: |
-          wget https://dev.mysql.com/get/Downloads/Connector-ODBC/8.2/mysql-connector-odbc_8.2.0-1ubuntu22.04_amd64.deb
-          wget https://dev.mysql.com/get/Downloads/MySQL-8.2/mysql-community-client-plugins_8.2.0-1ubuntu22.04_amd64.deb
-          sudo dpkg -i mysql-community-client-plugins_8.2.0-1ubuntu22.04_amd64.deb mysql-connector-odbc_8.2.0-1ubuntu22.04_amd64.deb
-      - name: Install Oracle ODBC Driver
-        if: success()
-        run: |
-          wget https://download.oracle.com/otn_software/linux/instantclient/2111000/instantclient-basiclite-linux.x64-21.11.0.0.0dbru.zip
-          wget https://download.oracle.com/otn_software/linux/instantclient/2111000/instantclient-odbc-linux.x64-21.11.0.0.0dbru.zip
-          unzip instantclient-basiclite-linux.x64-21.11.0.0.0dbru.zip -d /opt/oracle
-          unzip instantclient-odbc-linux.x64-21.11.0.0.0dbru.zip -d /opt/oracle
-          sudo apt-get install -y glibc-source libaio1
-          sudo bash /opt/oracle/instantclient_21_11/odbc_update_ini.sh "/" "/opt/oracle/instantclient_21_11" "Oracle 21 ODBC driver" "OracleODBC-21" "/etc/odbc.ini"
       - name: Run Tests
-        env:
-          LD_LIBRARY_PATH: /opt/oracle/instantclient_21_11
         if: success()
-        run: dotnet test --configuration Release --verbosity normal --logger trx
+        run: |
+          dotnet test \
+          --filter "Category!=SqlServer&Category!=Postgres&Category!=MySql&Category!=Oracle" \
+          --configuration Release \
+          --verbosity normal \
+          --logger trx
       - name: Upload test results
         uses: actions/upload-artifact@v3
         if: success() || failure()
         with:
-          name: test-results
+          name: ci__test_results
           path: ./**/TestResults/*.trx
           retention-days: 30
 
   publish:
     if: ${{ github.ref_name == 'main' }}
-    needs: [setup, test]
+    needs: [setup, test, oracle, mysql, postgres, sqlserver]
     runs-on: ubuntu-22.04
     strategy:
       matrix:
