--- a/.github/workflows/sqlserver.yml
+++ b/.github/workflows/sqlserver.yml
@@ -16,17 +16,10 @@ jobs:
           cache-dependency-path: ./SierraSam/packages.lock.json
       - name: Restore Dependencies
         run: dotnet restore --locked-mode
-      - name: Restore Build Artifacts
-        uses: actions/cache@v3
-        with:
-          path: |
-            ./*/bin/
-            ./*/obj/
-          key: linux-x64-build-${{ github.sha }}
       - name: Run Tests
         run: |
           dotnet test \
-          --no-build \
+          --no-restore \
           --filter Category=SqlServer \
           --configuration Release \
           --verbosity normal \
