--- a/.github/workflows/oracle.yml
+++ b/.github/workflows/oracle.yml
@@ -27,7 +27,7 @@ jobs:
           wget "https://download.oracle.com/otn_software/linux/instantclient/${{env.MAJOR_VERSION}}${{env.MINOR_VERSION}}000/instantclient-odbc-linux.x64-${{env.MAJOR_VERSION}}.${{env.MINOR_VERSION}}.0.0.0dbru.zip"
           unzip "instantclient-basiclite-linux.x64-${{env.MAJOR_VERSION}}.${{env.MINOR_VERSION}}.0.0.0dbru.zip" -d /opt/oracle
           unzip "instantclient-odbc-linux.x64-${{env.MAJOR_VERSION}}.${{env.MINOR_VERSION}}.0.0.0dbru.zip" -d /opt/oracle
-          sudo apt-get install -y glibc-source libaio1
+          sudo apt-get update && sudo apt-get install -y glibc-source libaio1
           sudo bash "/opt/oracle/instantclient_${{env.MAJOR_VERSION}}_${{env.MINOR_VERSION}}/odbc_update_ini.sh" "/" "/opt/oracle/instantclient_${{env.MAJOR_VERSION}}_${{env.MINOR_VERSION}}" "Oracle $MAJOR_VERSION ODBC driver" "OracleODBC-$MAJOR_VERSION" "/etc/odbc.ini"
       - name: Run Tests
         if: success()
